// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MethodField should match the previous snapshot 1`] = `
<div
  className="form-group"
>
  <div
    className="col-sm-2"
  >
    <label
      className="control-label"
      htmlFor="method"
    >
      Method
    </label>
  </div>
  <div
    className="col-sm-7"
  >
    <select
      className="form-control"
      id="method"
      placeholder="Method"
      type={undefined}
    >
      <option
        value="GET"
      >
        GET
      </option>
      <option
        value="POST"
      >
        POST
      </option>
      <option
        value="PUT"
      >
        PUT
      </option>
      <option
        value="DELETE"
      >
        DELETE
      </option>
      <option
        value="PATCH"
      >
        PATCH
      </option>
      <option
        value="HEAD"
      >
        HEAD
      </option>
      <option
        value="JSONP"
      >
        JSONP
      </option>
      <option
        value="CUSTOM"
      >
        CUSTOM
      </option>
    </select>
  </div>
  <div
    className="col-sm-3"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Send request
    </button>
  </div>
</div>
`;

exports[`MethodField should match the previous snapshot with invalid field state 1`] = `
<div
  className="form-group has-error"
>
  <div
    className="col-sm-2"
  >
    <label
      className="control-label"
      htmlFor="method"
    >
      Method
    </label>
  </div>
  <div
    className="col-sm-7"
  >
    <select
      className="form-control"
      id="method"
      placeholder="Method"
      type={undefined}
    >
      <option
        value="GET"
      >
        GET
      </option>
      <option
        value="POST"
      >
        POST
      </option>
      <option
        value="PUT"
      >
        PUT
      </option>
      <option
        value="DELETE"
      >
        DELETE
      </option>
      <option
        value="PATCH"
      >
        PATCH
      </option>
      <option
        value="HEAD"
      >
        HEAD
      </option>
      <option
        value="JSONP"
      >
        JSONP
      </option>
      <option
        value="CUSTOM"
      >
        CUSTOM
      </option>
    </select>
  </div>
  <div
    className="col-sm-3"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Send request
    </button>
  </div>
</div>
`;
